# hpc_submit_scripts

./: .flake8  .pre-commit-config.yaml  .pyproject.toml  .readthedocs.yaml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE.txt  README.rst  TERMINOLOGY.rst  hpcssrc.ini  pyproject.toml  requirements-dev.txt  requirements_dev.txt  setup.cfg  shellcheckrc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_request.yml  feature_request.yml
.github/workflows/: codeql-analysis.yml  pr-labeler.yml  tests-skip.yml  tests.yml
analysis/: README.rst
analysis/lintf2_ether/: README.rst
analysis/lintf2_ether/gmx/: .cleanup_gmx_analyses.sh  .rdf_slab-z_Li-com.sh  .rdf_slab-z_NTf2-com.sh  .rdf_slab-z_ether-com.sh  density-z_charge.sh  density-z_mass.sh  density-z_number.sh  densmap-z_Li.sh  densmap-z_NBT.sh  densmap-z_OBT.sh  densmap-z_OE.sh  densmap-z_gra.sh  energy.sh  gmx_Mdens-z_lintf2_ether.sh  gmx_Ndens-z_lintf2_ether.sh  gmx_Qdens-z_lintf2_ether.sh  gmx_densmap-z_Li_lintf2_ether.sh  gmx_densmap-z_NBT_lintf2_ether.sh  gmx_densmap-z_OBT_lintf2_ether.sh  gmx_densmap-z_OE_lintf2_ether.sh  gmx_densmap-z_gra_lintf2_ether.sh  gmx_energy_lintf2_ether.sh  gmx_make_ndx_lintf2_ether.sh  gmx_msd_electrodes_lintf2_ether.sh  gmx_msd_lateral-z_lintf2_ether.sh  gmx_msd_lintf2_ether.sh  gmx_msd_parallel-z_lintf2_ether.sh  gmx_msd_tensor_lintf2_ether.sh  gmx_polystat_lintf2_ether.sh  gmx_potential-z_lintf2_ether.sh  gmx_rdf_Li-com_lintf2_ether.sh  gmx_rdf_Li_lintf2_ether.sh  gmx_rdf_NBT_lintf2_ether.sh  gmx_rdf_NTf2-com_lintf2_ether.sh  gmx_rdf_OE_lintf2_ether.sh  gmx_rdf_ether-com_lintf2_ether.sh  gmx_rdf_slab-z_Li-com_lintf2_ether.sh  gmx_rdf_slab-z_Li_lintf2_ether.sh  gmx_rdf_slab-z_NBT_lintf2_ether.sh  gmx_rdf_slab-z_NTf2-com_lintf2_ether.sh  (+26 more)
analysis/lintf2_ether/mdt/: .cleanup_mdt_analyses.sh  .commands_block_averages.sh  attribute_hist_Li.sh  attribute_hist_NBT.sh  attribute_hist_NTf2.sh  attribute_hist_OBT.sh  attribute_hist_OE.sh  attribute_hist_ether.sh  axial_hex_dist_1nn_Li.sh  axial_hex_dist_1nn_NBT.sh  axial_hex_dist_1nn_OBT.sh  axial_hex_dist_1nn_OE.sh  axial_hex_dist_2nn_Li.sh  axial_hex_dist_2nn_NBT.sh  axial_hex_dist_2nn_OBT.sh  axial_hex_dist_2nn_OE.sh  contact_hist_Li-O.sh  contact_hist_Li-OBT.sh  contact_hist_Li-OBT_lintf2_ether.sh  contact_hist_Li-OE.sh  contact_hist_Li-OE_lintf2_ether.sh  contact_hist_Li-O_lintf2_ether.sh  contact_hist_O-Li.sh  contact_hist_O-Li_lintf2_ether.sh  contact_hist_OBT-Li.sh  contact_hist_OBT-Li_lintf2_ether.sh  contact_hist_OE-Li.sh  contact_hist_OE-Li_lintf2_ether.sh  contact_hist_at_pos_change_Li-OBT.sh  contact_hist_at_pos_change_Li-OBT_lintf2_ether.sh  contact_hist_at_pos_change_Li-OE.sh  contact_hist_at_pos_change_Li-OE_lintf2_ether.sh  contact_hist_slab-z_Li-OBT.sh  contact_hist_slab-z_Li-OBT_lintf2_ether.sh  contact_hist_slab-z_Li-OE.sh  contact_hist_slab-z_Li-OE_lintf2_ether.sh  create_mda_universe.sh  densmap-z_Li.sh  densmap-z_NBT.sh  densmap-z_NTf2.sh  (+74 more)
analysis/lintf2_ether/pyemma/: msm_cktest.sh  msm_discrete.sh  msm_discrete.sh.old_xtc  msm_its.sh  msm_mm.sh  submit_pyemma_analyses_lintf2_ether.sh
bash/: README.rst  cleanup_analysis.sh  date_time_diff.sh  decompress.sh  echo_slurm_output_environment_variables.sh  gmx_get_num_steps_from_log.sh  load_gmx.sh  load_python.sh
docs/: Makefile  README.rst  requirements-docs.txt
docs/logo/: README.rst
docs/source/: conf.py  index.rst
docs/source/doc_pages/: pymodules.rst  submit_scripts.rst
docs/source/doc_pages/dev_guide/: build_docs.rst  code_guidelines_bash.rst  code_guidelines_md.rst  code_guidelines_py.rst  dev_guide.rst  dev_install.rst  doc_guidelines.rst  git_workflow.rst  pre_commit.rst  test_guidelines.rst  versioning.rst
docs/source/doc_pages/general/: config_file.rst  hpc_terminology.rst  installation.rst  sbatch_options.rst  usage.rst
img/: README.rst
lmod/: README.rst
lmod/palma/2019a/: bzip2_1-0-6.sh  gmx2016-6_foss.sh  gmx2016-6_intel.sh  gmx2018-8_foss.sh  gmx2018-8_plumed-2-5-5_foss.sh  gnuplot5-2-6.sh  gzip1-10.sh  openmpi3-1-3.sh  openmpi3-1-3_cuda.sh  python3-7-2.sh  vmd1-9-3_foss.sh  vmd1-9-3_intel.sh  xz5-2-4.sh
lmod/palma/2019b/: bzip2_1-0-8.sh  gmx2019-6_foss.sh  gmx2019-6_plumed2-6-4_foss.sh  gnuplot5-2-8.sh  openmpi3-1-4.sh  openmpi3-1-4_cuda.sh  python3-7-4.sh  vmd1-9-3_foss.sh  vmd1-9-4_foss.sh  vmd1-9-4_foss_cuda.sh  xz5-2-4.sh
lmod/palma/2020a/: bzip2_1-0-8.sh  gmx2020-1_foss.sh  gmx2020-5_foss_cuda.sh  gzip1-10.sh  openmpi4-0-3.sh  openmpi4-0-3_cuda.sh  python3-8-2.sh  xz5-2-5.sh
lmod/palma/2020b/: bzip2_1-0-8.sh  gmx2018-8_intel.sh  gnuplot5-4-1.sh  gzip1-10.sh  openmpi4-0-5.sh  openmpi4-0-5_cuda.sh  python2-7-18.sh  python3-8-6.sh  vmd1-9-4_foss_cuda.sh  xz5-2-5.sh
lmod/palma/2021a/: bzip2_1-0-8.sh  gnuplot5-4-2.sh  gzip1-10.sh  openmpi4-1-1.sh  python3-9-5-bare.sh  python3-9-5.sh  xz5-2-5.sh
lmod/palma/2021b/: bzip2_1-0-8.sh  gzip1-10.sh  openmpi4-1-1.sh  python3-9-6-bare.sh  python3-9-6.sh  xz5-2-5.sh
python/: README.rst  gmx.py  opthandler.py  strng.py
simulation/: README.rst
simulation/gmx/: gmx_mdrun.sh  submit_gmx_mdrun.py
