# Configuration file for Python projects.  See
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# https://peps.python.org/pep-0621/#example

[project]
# Project metadata.  See
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "hpcss"
version = "0.0.0.dev0"
description = "Slurm scripts to run and analyze MD simulations on HPC clusters"
readme = "README.rst"
requires-python = ">=3.8, <3.10"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Andreas Thum", email = "coding.anthum@e.mail.de"},
]
maintainers = [
    {name = "Andreas Thum", email = "coding.anthum@e.mail.de"},
]
keywords = [
    "Scripts Collection",
    "Python Scripts",
    "Batch Scripts",
    "Slurm",
    "Slurm Workload Manager",
    "Slurm Job Scripts",
    "High Performance Computing",
    "HPC Cluster",
    "Science",
    "Scientific Computing",
    "Computational Science",
    "Molecular Simulation",
    "Molecular Modeling",
    "Molecular Mechanics",
    "Molecular Dynamics",
    "Molecular Dynamics Simulation",
    "Trajectory Analysis",
    "Gromacs",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Utilities",
]

[project.urls]
homepage = "https://github.com/andthum/hpc_submit_scripts"
documentation = "https://hpcss.readthedocs.io/en/latest/"
repository = "https://github.com/andthum/hpc_submit_scripts"
issues = "https://github.com/andthum/hpc_submit_scripts/issues"
discussions = "https://github.com/andthum/hpc_submit_scripts/discussions"

[tool.bandit]
# B404: Consider possible security implications associated with the subprocess module
# B603: subprocess call - check for execution of untrusted input
skips = ["B404", "B603"]

[tool.black]
required-version = 22
line-length = 79
target-version = ["py39"]

[tool.isort]
# profile should go on top so that it does not overwrite other settings.
profile = "black"
# Comments to put above import sections.
import_heading_future = "Future imports"
import_heading_stdlib = "Standard libraries"
import_heading_thirdparty = "Third-party libraries"
import_heading_firstparty = "First-party libraries"
import_heading_localfolder = "Local imports"
line_length = 79
# Number of blank lines around import statements.
lines_before_imports = 2
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
py_version = 39
# Ignore files listed in .gitignore.
skip_gitignore = true
